@@ -1,3 +1,5 @@
+- pop wait_messages and ensure same window is used for next wait_messages
+  (to ensure the background is not greyed,ungreyed,greyed,...)
 - improved license step
 - install lilo when needed (#39878)
 - render some message titles as blue
